--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,15 @@
+blinker==1.9.0
 certifi==2024.12.14
-charset-normalizer==2.0.12
-click==8.0.4
-dataclasses==0.8
-Flask==2.0.3
+charset-normalizer==3.4.1
+click==8.1.8
+colorama==0.4.6
+Flask==3.1.0
 idna==3.10
-importlib-metadata==4.8.3
-itsdangerous==2.0.1
-Jinja2==3.0.3
-MarkupSafe==2.0.1
-python-dotenv==0.20.0
-requests==2.27.1
-typing_extensions==4.1.1
-urllib3==1.26.20
-waitress==2.0.0
-Werkzeug==2.0.3
-zipp==3.6.0
+itsdangerous==2.2.0
+Jinja2==3.1.5
+MarkupSafe==3.0.2
+python-dotenv==1.0.1
+requests==2.32.3
+urllib3==2.3.0
+waitress==3.0.2
+Werkzeug==3.1.3
