--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,12 @@
-blinker==1.9.0
-certifi==2024.12.14
-charset-normalizer==3.4.1
-click==8.1.8
-colorama==0.4.6
-Flask==3.1.0
-idna==3.10
-itsdangerous==2.2.0
-Jinja2==3.1.5
-MarkupSafe==3.0.2
-python-dotenv==1.0.1
-requests==2.32.3
-urllib3==2.3.0
-waitress==3.0.2
-Werkzeug==3.1.3
+Flask==2.0.1
+requests==2.26.0
+python-dotenv==0.19.0
+waitress==2.0.0
+Flask-SQLAlchemy==2.5.1
+Flask-Login==0.5.0
+Flask-Migrate==3.1.0
+psycopg2-binary==2.9.5
+Werkzeug==2.0.1
+gunicorn==20.1.0
+SQLAlchemy==1.4.23
+email-validator==1.1.3
