--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,7 @@
-Flask==2.0.1
-requests==2.26.0
-python-dotenv==0.19.0
-waitress==2.0.0
-Flask-SQLAlchemy==2.5.1
-Flask-Login==0.5.0
-Flask-Migrate==3.1.0
-psycopg2-binary==2.9.5
-Werkzeug==2.0.1
-gunicorn==20.1.0
-SQLAlchemy==1.4.23
-email-validator==1.1.3
+Django==5.0.2
+django-environ==0.11.2
+requests==2.31.0
+gunicorn==21.2.0
+psycopg2-binary==2.9.9
+whitenoise==6.6.0
+python-dotenv==1.0.1
