--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,30 @@
-# Django settings
-SECRET_KEY=your-secret-key-here
-DEBUG=True
-ALLOWED_HOSTS=localhost,127.0.0.1
+# Django Core Settings
+SECRET_KEY=your-secret-key-here # Required: Django secret key for security (generate a new one for production)
+DEBUG=True # Optional: Set to False in production
+ALLOWED_HOSTS=localhost,127.0.0.1 # Optional: Comma-separated list of allowed hosts
 
-# OpenWeather API key
-API_KEY=your-openweather-api-key
+# Database Settings (PostgreSQL)
+# Note: If these are not set, the app will use SQLite by default
+PGDATABASE=your_database_name # Database name (default: railway)
+PGUSER=your_database_user # Database user (default: postgres)
+PGPASSWORD=your_database_password # Database password
+PGHOST=your_database_host # Database host (default: localhost)
+PGPORT=5432 # Database port (default: 5432)
 
-# Database settings (for Railway.app)
-PGDATABASE=railway
-PGUSER=postgres
-PGPASSWORD=your-password
-PGHOST=your-host
-PGPORT=5432
+# API Keys
+API_KEY=your-openweather-api-key # Required: OpenWeather API key for weather data
+
+# Security Settings (Production)
+# Uncomment and set these in production
+# CSRF_COOKIE_SECURE=True
+# SESSION_COOKIE_SECURE=True
+# SECURE_SSL_REDIRECT=True
+# SECURE_HSTS_SECONDS=31536000
+# SECURE_HSTS_INCLUDE_SUBDOMAINS=True
+# SECURE_HSTS_PRELOAD=True
+
+# CSRF Settings (if you need to customize)
+# CSRF_COOKIE_NAME=csrftoken
+# CSRF_HEADER_NAME=HTTP_X_CSRFTOKEN
+
+# Trusted Origins for CSRF (add your production domains)
